fix styling on navbar so page titles can align right

--- a/WebContent/styles/screenerPage.css
+++ b/WebContent/styles/screenerPage.css
@@ -5,7 +5,6 @@ body {
 }
 
 h1 {
-	text-align: right;
 	margin-right: 15px;
 	color: rgb(182, 193, 224);
 	font-size: 50px;
